--- a/portfolio.html
+++ b/portfolio.html
@@ -78,25 +78,20 @@
                   <div class="profile-img1 d-flex justify-content-center overflow-hidden">
                     <img src="./assets/images/profile.svg" alt="user" class="" />
                   </div>
-                  <span class="thumb">👋</span>
+                  
                 </div>
 
                 <h4 class="n5-color fw-semibold fs-five mt-2 text-center">
                   Gurjit Kaur
                 </h4>
                 <span class="n5-color fs-nine d-block text-center">Sr. UX/UI Product Designer</span>
-                <div class="d-flex justify-content-center gap-2 align-items-center mt-4">
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-facebook-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-instagram-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-x-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
+                 <div class="d-flex justify-content-center gap-2 align-items-center mt-4">
+                                 
+                  <a href="https://www.linkedin.com/in/gurjit-sahota/" class="social-icon p1-color">
                     <i class="ph ph-linkedin-logo"></i>
+                  </a>
+                   <a href="https://www.facebook.com/gurjit.kaur.333" class="social-icon p1-color">
+                    <i class="ph ph-facebook-logo"></i>
                   </a>
                 </div>
               </div>
@@ -114,7 +109,7 @@
                       <div class="d-flex align-items-center gap-2  n11-color fs-eight px-3 py-2">
                         <i class="ph ph-code-block fs-six"></i> Portfolio
                       </div>
-                      <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3">16</span>
+                      <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3">06</span>
                     </a>
                   </li>
 
@@ -184,7 +179,7 @@
                   </span>
                   <span class="d-none d-md-block">Portfolio</span>
                 </div>
-                <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3 d-none d-md-block">16</span>
+                <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3 d-none d-md-block">06</span>
               </a>
             </li>
 
