--- a/portfolio_details1.html
+++ b/portfolio_details1.html
@@ -103,7 +103,7 @@
                   <div class="profile-img1 d-flex justify-content-center overflow-hidden">
                     <img src="./assets/images/profile.svg" alt="user" class="" />
                   </div>
-                  <span class="thumb">👋</span>
+                 
                 </div>
 
                 <h4 class="n5-color fw-semibold fs-five mt-2 text-center">
@@ -111,17 +111,12 @@
                 </h4>
                 <span class="n5-color fs-nine d-block text-center">Sr. UX/UI Product Designer</span>
                 <div class="d-flex justify-content-center gap-2 align-items-center mt-4">
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-facebook-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-instagram-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-x-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
+                                 
+                  <a href="https://www.linkedin.com/in/gurjit-sahota/" class="social-icon p1-color">
                     <i class="ph ph-linkedin-logo"></i>
+                  </a>
+                   <a href="https://www.facebook.com/gurjit.kaur.333" class="social-icon p1-color">
+                    <i class="ph ph-facebook-logo"></i>
                   </a>
                 </div>
               </div>
@@ -267,10 +262,11 @@
                       >Technologies</span>
                     <span class="n5-color fs-six fw-medium">Figma, Jira, Confluence, HTML5, SCSS, Bootstrap5</span>
                   </div>
-                  <!--<div>
+                  <div>
                     <span class="n4-color fs-eight fw-medium d-block">Website</span>
-                    <a href="javascript:void(0)" class="n5-color fs-six fw-medium d-flex align-items-center gap-2">Live preview <i class="ph-bold ph-arrow-right"></i></a>
-                  </div> -->
+                    <a href="https://www.figma.com/proto/fwFD6TqPs5lEvka5bpmYCW/My-Account?node-id=1-7817&t=cAoKPQfK2wlXCAGz-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A7047">
+                      Preview <i class="ph-bold ph-arrow-right"></i></a>
+                  </div>
                 </div>
               </div>
 
