--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <div class="profile-img1 d-flex justify-content-center overflow-hidden">
                     <img src="./assets/images/profile.svg" alt="user" class="" />
                   </div>
-                  <span class="thumb">👋</span>
+                 
                 </div>
 
                 <h4 class="n5-color fw-semibold fs-five mt-2 text-center">
@@ -88,16 +88,11 @@
                 </h4>
                 <span class="n5-color fs-nine d-block text-center">Sr. UX/UI Product Designer</span>
                 <div class="d-flex justify-content-center gap-2 align-items-center mt-4">
-                  <a href="javascript:void(0)" class="social-icon p1-color">
+                  <a href="https://www.facebook.com/gurjit.kaur.333" class="social-icon p1-color">
                     <i class="ph ph-facebook-logo"></i>
                   </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-instagram-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-x-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
+                 
+                  <a href="https://www.linkedin.com/in/gurjit-sahota/" class="social-icon p1-color">
                     <i class="ph ph-linkedin-logo"></i>
                   </a>
                 </div>
