--- a/contact.html
+++ b/contact.html
@@ -274,20 +274,22 @@
               <i class="ph ph-compass p1-color fs-one"></i>
               <div>
                 <span class="n5-color fs-five fw-semibold d-block mb-2">Location</span>
-                <span class="n4-color fs-nine">8 June Callwood Way, Brantford, Ontario</span>
+                <span class="n4-color fs-nine">Toronto, Ontario, Canada</span>
               </div>
             </div>
             <div class="d-flex gap-3 align-items-center p-3 p-md-5 br1-left">
               <i class="ph ph-envelope-open p1-color fs-one"></i>
               <div>
                 <span class="n5-color fs-five fw-semibold d-block mb-2">Email</span>
-                <a href="mailto:someone@example.com" class="n4-color fs-nine">gurjit.sahota01@gmail.com</a>
+                <a href="mailto:gurjit.sahota01@gmail.com" class="n4-color fs-nine">gurjit.sahota01@gmail.com</a>
               </div>
             </div>
           </div>
 
           <div data-aos="zoom-in" class="mt-8 mt-md-15">
-           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2912.778253544609!2d-80.31230602391865!3d43.10917478744695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882c68582e9f5301%3A0xf164a20ef3df6a1!2s8%20June%20Callwood%20Wy%2C%20Brantford%2C%20ON%20N3T%200T7!5e0!3m2!1sen!2sca!4v1750363029670!5m2!1sen!2sca" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d198490.24001054376!2d-79.54286488562747!3d43.718122804951584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cb90d7c63ba5%3A0x323555502ab4c477!2sToronto%2C%20ON!5e1!3m2!1sen!2sca!4v1750365102587!5m2!1sen!2sca" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+           
           </div>
         </div>
       </section>
