--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
                 </h4>
                 <span class="n5-color fs-nine d-block text-center">Sr. UX/UI Product Designer</span>
                 <div class="d-flex justify-content-center gap-2 align-items-center mt-4">
-                  <a href="https://www.facebook.com/gurjit.kaur.333" class="social-icon p1-color">
-                    <i class="ph ph-facebook-logo"></i>
-                  </a>
-                 
+                                 
                   <a href="https://www.linkedin.com/in/gurjit-sahota/" class="social-icon p1-color">
                     <i class="ph ph-linkedin-logo"></i>
+                  </a>
+                   <a href="https://www.facebook.com/gurjit.kaur.333" class="social-icon p1-color">
+                    <i class="ph ph-facebook-logo"></i>
                   </a>
                 </div>
               </div>
@@ -615,9 +615,9 @@
                       <a href="javascript:void(0)"
                         class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Figma</a>
                       <a href="javascript:void(0)"
-                        class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Maze</a>
+                        class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Photoshop</a>
                       <a href="javascript:void(0)"
-                        class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">HTML/SCSS</a>
+                        class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Jira</a>
                     </div>
                     <a href="portfolio_details4.html"
                       class="project-title fs-five fw-semibold n5-color mt-3 mt-md-5 d-block">
