--- a/portfolio_details2.html
+++ b/portfolio_details2.html
@@ -259,7 +259,7 @@
                 <!--<div>
                   <span class="n4-color fs-eight fw-medium d-block">Website</span>
                   <a href="javascript:void(0)" class="n5-color fs-six fw-medium d-flex align-items-center gap-2">Live
-                    preview <i class="ph-bold ph-arrow-right"></i></a>
+                    <span class="n5-color">Preview <i class="ph-bold ph-arrow-right"></i></span></a>
                 </div> -->
               </div>
             </div>
