--- a/portfolio_details4.html
+++ b/portfolio_details4.html
@@ -112,18 +112,13 @@
                   Gurjit Kaur
                 </h4>
                 <span class="n5-color fs-nine d-block text-center">Sr. UX/UI Product Designer</span>
-                <div class="d-flex justify-content-center gap-2 align-items-center mt-4">
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-facebook-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-instagram-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
-                    <i class="ph ph-x-logo"></i>
-                  </a>
-                  <a href="javascript:void(0)" class="social-icon p1-color">
+                 <div class="d-flex justify-content-center gap-2 align-items-center mt-4">
+                                 
+                  <a href="https://www.linkedin.com/in/gurjit-sahota/" class="social-icon p1-color">
                     <i class="ph ph-linkedin-logo"></i>
+                  </a>
+                   <a href="https://www.facebook.com/gurjit.kaur.333" class="social-icon p1-color">
+                    <i class="ph ph-facebook-logo"></i>
                   </a>
                 </div>
               </div>
@@ -263,7 +258,7 @@
                 <!--<div>
                   <span class="n4-color fs-eight fw-medium d-block">Website</span>
                   <a href="javascript:void(0)" class="n5-color fs-six fw-medium d-flex align-items-center gap-2">Live
-                    preview <i class="ph-bold ph-arrow-right"></i></a>
+                   <span class="n5-color">Preview <i class="ph-bold ph-arrow-right"></i></span></a>
                 </div> -->
               </div>
             </div>
