--- a/portfolio.html
+++ b/portfolio.html
@@ -314,7 +314,7 @@
                           <div class="d-flex gap-2 align-items-center">
                             <a href="javascript:void(0)"
                               class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Figma
-                              JS</a>
+                              </a>
                             <a href="javascript:void(0)"
                               class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Miro</a>
                             <a href="javascript:void(0)"
@@ -353,7 +353,7 @@
                           <div class="d-flex gap-2 align-items-center">
                             <a href="javascript:void(0)"
                               class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Figma
-                              JS</a>
+                              </a>
                             <a href="javascript:void(0)"
                               class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">A/B
                               Testing</a>
@@ -677,7 +677,7 @@
                         <div class="d-flex gap-2 align-items-center">
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Photoshop
-                            JS</a>
+                            </a>
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Illustrator</a>
                           <a href="javascript:void(0)"
@@ -713,7 +713,7 @@
                         <div class="d-flex gap-2 align-items-center">
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Photoshop
-                            JS</a>
+                          </a>
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Illustrator</a>
                           <a href="javascript:void(0)"
@@ -751,7 +751,7 @@
                         <div class="d-flex gap-2 align-items-center">
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Photoshop
-                            JS</a>
+                            </a>
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Illustrator</a>
                           <a href="javascript:void(0)"
@@ -760,7 +760,7 @@
                         <a href="portfolio.html"
                           class="project-title fs-five fw-semibold n5-color mt-3 mt-md-5 d-block">
 
-                          Web banner (Networking)
+                          Web banner (Promo)
                         </a>
                       </div>
 
@@ -788,7 +788,7 @@
                         <div class="d-flex gap-2 align-items-center">
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Photoshop
-                            JS</a>
+                            </a>
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Illustrator</a>
                           <a href="javascript:void(0)"
@@ -797,7 +797,7 @@
                         <a href="portfolio.html"
                           class="project-title fs-five fw-semibold n5-color mt-3 mt-md-5 d-block">
 
-                          Web banner (Networking)
+                          Web banner (Promo)
                         </a>
                       </div>
 
@@ -826,7 +826,7 @@
                         <div class="d-flex gap-2 align-items-center">
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Photoshop
-                            JS</a>
+                            </a>
                           <a href="javascript:void(0)"
                             class="n5-color fs-nine px-2 px-md-4 py-1 py-md-2 brn3 rounded-pill fw-medium">Illustrator</a>
                           <a href="javascript:void(0)"
@@ -835,7 +835,7 @@
                         <a href="portfolio.html"
                           class="project-title fs-five fw-semibold n5-color mt-3 mt-md-5 d-block">
 
-                          Web banner (Networking)
+                          Web banner (Promo)
                         </a>
                       </div>
 
