--- a/portfolio_details1.html
+++ b/portfolio_details1.html
@@ -265,7 +265,7 @@
                   <div>
                     <span class="n4-color fs-eight fw-medium d-block">Website</span>
                     <a href="https://www.figma.com/proto/fwFD6TqPs5lEvka5bpmYCW/My-Account?node-id=1-7817&t=cAoKPQfK2wlXCAGz-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A7047">
-                      Preview <i class="ph-bold ph-arrow-right"></i></a>
+                      <span class="n5-color">Preview <i class="ph-bold ph-arrow-right"></i></span></a>
                   </div>
                 </div>
               </div>
