--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -112,7 +112,7 @@
                   Gurjit Kaur
                 </h4>
                 <span class="n5-color fs-nine d-block text-center">Sr. UX/UI Product Designer</span>
-           <div class="d-flex justify-content-center gap-2 align-items-center mt-4">
+                <div class="d-flex justify-content-center gap-2 align-items-center mt-4">
                                  
                   <a href="https://www.linkedin.com/in/gurjit-sahota/" class="social-icon p1-color">
                     <i class="ph ph-linkedin-logo"></i>
@@ -258,7 +258,7 @@
                 <!--<div>
                   <span class="n4-color fs-eight fw-medium d-block">Website</span>
                   <a href="javascript:void(0)" class="n5-color fs-six fw-medium d-flex align-items-center gap-2">Live
-                    preview <i class="ph-bold ph-arrow-right"></i></a>
+                   <span class="n5-color">Preview <i class="ph-bold ph-arrow-right"></i></span></a>
                 </div> -->
               </div>
             </div>
