--- a/portfolio_details5.html
+++ b/portfolio_details5.html
@@ -259,7 +259,7 @@
                 <div>
                   <span class="n4-color fs-eight fw-medium d-block">Website</span>
                   <a href="https://sites.google.com/view/gurjit-dhillon/nodal-nda" class="n5-color fs-six fw-medium d-flex align-items-center gap-2">
-                    Preview <i class="ph-bold ph-arrow-right"></i></a>
+                    <span class="n5-color">Preview <i class="ph-bold ph-arrow-right"></i></span></a>
                 </div>
               </div>
             </div>
