--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- #keywords -->
-  <meta name="keywords" content="boot, Bootstrap, Gurjit's Blog HTML Template" />
-  <!-- #description -->
-  <meta name="description" content="Gurjit's Blog - Responsive Personal Portfolio & Resume HTML Template" />
+ 
   <!-- #title -->
-  <title>Gurjit - Personal Portfolio & Resume HTML Template</title>
+  <title>Gurjit - Personal Portfolio</title>
   <!-- #favicon -->
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon" />
   <!-- ==== css dependencies start ==== -->
   <link rel="stylesheet" href="assets/css/style.css" />
   <!-- AOS  -->
@@ -192,20 +188,19 @@
       </div>
 
       <!-- color palettes btns -->
+    <!-- color palettes btns -->
       <div class="color-switcher">
         <button class="switcher-btn">
           <i class="ph ph-gear-six"></i>
         </button>
         <div class="pallates box-shadow2 brn4">
           <div class="d-flex gap-2">
-            <button class="color-btn bg-color1" data-color="120, 171, 168"></button>
-            <button class="color-btn bg-color2" data-color="255, 145, 251"></button>
+            <button class="color-btn bg-color1" data-color="120, 171, 168"></button>           
             <button class="color-btn bg-color3" data-color="253, 187, 46"></button>
           </div>
           <div class="d-flex gap-2 mt-2">
             <button class="color-btn bg-color4" data-color=" 58, 100, 183"></button>
-            <button class="color-btn bg-color5" data-color=" 111, 98,175"></button>
-            <button class="color-btn bg-color6" data-color="84, 182, 137"></button>
+            <button class="color-btn bg-color5" data-color=" 111, 98,175"></button>           
           </div>
         </div>
       </div>
