--- a/portfolio_details1.html
+++ b/portfolio_details1.html
@@ -273,7 +273,7 @@
                 >
                   <div class="overflow-hidden">
                     <img
-                      src="./assets/images/project1.png"
+                      src="./assets/images/mapping.png"
                       alt="project"
                       class="w-100 portfolio-details-img"
                     />
