--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -251,11 +251,11 @@
                   <span class="n4-color fs-eight fw-medium d-block">Technologies</span>
                   <span class="n5-color fs-six fw-medium">Figma, Jira, Confluence, HTML5, SCSS, Bootstrap5</span>
                 </div>
-                <!--<div>
+                <div>
                   <span class="n4-color fs-eight fw-medium d-block">Website</span>
-                  <a href="javascript:void(0)" class="n5-color fs-six fw-medium d-flex align-items-center gap-2">Live
+                  <a href="https://www.bell.ca/Bell_Internet/Internet_access" class="n5-color fs-six fw-medium d-flex align-items-center gap-2">Live
                    <span class="n5-color">Preview <i class="ph-bold ph-arrow-right"></i></span></a>
-                </div> -->
+                </div>
               </div>
             </div>
 
