--- a/portfolio_details8.html
+++ b/portfolio_details8.html
@@ -249,15 +249,14 @@
             </div>
 
             <!-- Portfolio details section start -->
-            <section class="py-60 mt-10 mt-lg-0">
-
-                <div class="container mt-8 mt-md-15 pb-60">
+            <section class="py-60">
+                <div class="container pb-60">
                     <div class="row g-6">
                         <div data-aos="fade-left" class="col-12 col-xl-3">
                             <div class="d-flex flex-column gap-5 position-sticky top-5 brn4 p-3 rounded">
                                 <div>
-                                    <span class="n4-color fs-eight fw-medium d-block">Client:</span>
-                                    <span class="n5-color fs-six fw-medium">Primus</span>
+                                    <span class="n4-color fs-eight fw-medium d-block">Company:</span>
+                                    <span class="n5-color fs-six fw-medium">Bell</span>
                                 </div>
                                 <div>
                                     <span class="n4-color fs-eight fw-medium d-block">Services</span>
@@ -269,7 +268,7 @@
                                 </div>
                                 <div>
                                     <span class="n4-color fs-eight fw-medium d-block">Website</span>
-                                    <a href="https://www.primus.ca/index.php/ont_en/home-phone.html">
+                                    <a href="https://www.bell.ca/Bell_Internet/Products/WiFi">
                                         <span class="n5-color">Preview <i class="ph-bold ph-arrow-right"></i></span></a>
                                 </div>
                             </div>
@@ -278,24 +277,20 @@
                         <div data-aos="fade-right" class="col-12 col-xl-9">
                             <div class="project-details-content d-flex flex-column gap-8 gap-md-15">
                                 <div class="overflow-hidden">
-                                    <img src="./assets/images/project7.png" alt="project"
+                                    <img src="./assets/images/project8.svg" alt="project"
                                         class="w-100 portfolio-details-img" />
                                 </div>
 
                                 <div data-aos="fade-up">
                                     <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
-                                        Case Study: eService MyPrimus
+                                        Case Study: Bell Wi-Fi
                                     </h3>
                                     <p class="fs-seven n5-color">
-                                        Redesigned key components of the Primus e-Service kiosk application, used in
-                                        Best Buy stores to help customers explore and select residential services such
-                                        as internet, TV, and phone plans. The focus was on improving the usability and
-                                        visual hierarchy of the plan selection screens, enhancing clarity, and
-                                        streamlining the sign-up process to reduce friction for in-store customers.
+                                        Redesign the Bell Wi-Fi app to improve usability, empower customers with greater control over their home network, 
+                                        and introduce new features such as individual device usage tracking and parental controls.
 
                                         The redesign delivered a more intuitive, engaging, and efficient self-service
-                                        experience, enabling customers to confidently compare options and complete
-                                        sign-ups with minimal assistance.
+                                        experience, enabling customers to confidently compare inetrnet uses and upgrade plan with minimal assistance.
                                     </p>
                                 </div>
                                 <div data-aos="fade-up">
@@ -306,10 +301,15 @@
                                         <li class="n4-color fs-seven mb-2 mb-md-3">
                                             <b>Problem / Challenge:</b>
                                             <ul>
-                                                <li>What wasn’t working in the old design? (cluttered plan comparison,
-                                                    confusing navigation, long sign-up process, low engagement).</li>
-                                                <li>Why was it a problem? (frustration for customers, high dependency on
-                                                    store reps, drop-offs in sign-ups).</li>
+                                                <li>Existing app was functional but lacked intuitive navigation.</li>
+                                                <li>Customers struggled to:
+                                                    <ul>
+                                                        <li>Monitor device-level data usage</li>
+                                                        <li>Pause / resume devices easily</li>
+                                                        <li>Manage parental controls in a seamless way</li>
+                                                    </ul>
+                                                </li>
+                                                <li>Business need: reduce dependency on customer support calls by making the app self-serve friendly.</li>
                                             </ul>
 
 
@@ -317,36 +317,53 @@
                                         <li class="n4-color fs-seven mb-2 mb-md-3">
                                             <b>Goals & Objectives:</b>
                                             <ul>
-                                                <li>Improve usability and visual hierarchy.</li>
-                                                <li>Make plan comparison and selection more intuitive.</li>
-                                                <li>Streamline the sign-up process to reduce friction.</li>
-                                                <li>Enhance overall customer confidence in self-service.</li>
+                                                <li>User Goals: Quick access to device control, real-time monitoring, stress-free setup.</li>
+                                                <li>Business Goals: Reduce support calls, increase customer engagement, improve retention.</li>
+                                                <li>Success Metrics:
+                                                    <ul>
+                                                        <li>+30% increase in daily active users</li>
+                                                        <li>-20% reduction in Wi-Fi related support calls</li>
+                                                        <li>App store rating improvement</li>
+                                                    </ul>
+                                                </li>                                                
                                             </ul>
-
                                         </li>
                                         <li class="n4-color fs-seven mb-2 mb-md-3">
                                             <b>Research & Insights:</b>
                                             <ul>
-                                                <li>Methods used (heuristic evaluation, customer journey mapping,
-                                                    stakeholder inputs, competitor review).</li>
-                                                <li>Key findings (e.g., customers struggled to differentiate plans, too
-                                                    much text, unclear calls-to-action).</li>
+                                                <li>Methods: Stakeholder interviews, competitor analysis (e.g., Rogers Ignite, TP-Link Deco), 
+                                                    usability testing of current app, customer surveys.</li>
+                                                <li>Key Findings: 
+                                                    <ul>
+                                                        <li>Customers want clearer visibility into their connected devices.</li>
+                                                        <li><b>Overloaded screens →</b> too much technical jargon.</li>
+                                                        <li>Common workflows (pause device, check speeds) buried in menus.</li>
+                                                        <li>Desire for personalization (naming devices, parental restrictions).</li>
+                                                    </ul>
+                                                </li>
                                             </ul>
                                         </li>
 
                                    
                                     </ul>
                                     <h5 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
-                                        Low-fidelity wireframes
+                                       Design Process
                                     </h5>
                                     <div class="row g-3 g-md-6">
-
                                         <div class="col-sm-12 overflow-hidden">
-                                            <img src="./assets/images/kiosk-LF.png" alt="project"
+                                            <img src="./assets/images/project8.png" alt="project"
                                                 class="w-100 object-fit-cover portfolio-details-img" />
                                         </div>
-
                                     </div>
+                                    <ul class="mt-5">
+                                      <li class="n4-color fs-seven mb-2 mb-md-3">
+                                            <b>Information Architecture</b>
+                                            <ul>
+                                                <li>Reorganized navigation into 3 primary tabs: Home, Devices, Settings.</li>  
+                                                <li>Added a persistent Wi-Fi health status card on Home screen.</li>                                                                                       
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </div>
 
 
