--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -132,7 +132,7 @@
                       <div class="d-flex align-items-center gap-2  n11-color fs-eight px-3 py-2">
                         <i class="ph ph-code-block fs-six"></i> Portfolio
                       </div>
-                      <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3">06</span>
+                      <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3">08</span>
                     </a>
                   </li>
 
@@ -241,7 +241,7 @@
               <div class="d-flex flex-column gap-5 position-sticky top-5 brn4 p-3 rounded">
                 <div>
                   <span class="n4-color fs-eight fw-medium d-block">Client:</span>
-                  <span class="n5-color fs-six fw-medium">Distribute, Acanac</span>
+                  <span class="n5-color fs-six fw-medium">Bell, Virgin Plus, Distribute, Acanac</span>
                 </div>
                 <div>
                   <span class="n4-color fs-eight fw-medium d-block">Services</span>
