--- a/portfolio_details8.html
+++ b/portfolio_details8.html
@@ -138,13 +138,6 @@
                                             <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3">08</span>
                                         </a>
                                     </li>
-
-                                    <!-- <li class="rounded-3">
-                    <a href="resume.html" class="d-flex align-items-center gap-2 n5-color fs-eight px-3 py-2"><i
-                        class="ph ph-notebook fs-six"></i> Resume</a>
-                  </li>-->
-
-
                                     <li class="rounded-3">
                                         <a href="contact.html"
                                             class="d-flex align-items-center gap-2 n5-color fs-eight px-3 py-2"><i
@@ -351,16 +344,56 @@
                                     </h5>
                                     <div class="row g-3 g-md-6">
                                         <div class="col-sm-12 overflow-hidden">
-                                            <img src="./assets/images/project8.png" alt="project"
+                                            <img src="./assets/images/project8-2.png" alt="project"
                                                 class="w-100 object-fit-cover portfolio-details-img" />
                                         </div>
                                     </div>
                                     <ul class="mt-5">
-                                      <li class="n4-color fs-seven mb-2 mb-md-3">
+                                      <li class="n4-color fs-seven mb-2 mb-md-3" style="list-style: none;">
                                             <b>Information Architecture</b>
                                             <ul>
                                                 <li>Reorganized navigation into 3 primary tabs: Home, Devices, Settings.</li>  
                                                 <li>Added a persistent Wi-Fi health status card on Home screen.</li>                                                                                       
+                                            </ul>
+                                        </li>
+                                    </ul>
+
+                                    <ul class="mt-5">
+                                      <li class="n4-color fs-seven mb-2 mb-md-3" style="list-style: none;">
+                                            <b>Wireframes</b>
+                                            <ul>
+                                                <li>Device list → device detail → pause/resume</li>  
+                                                <li>Data usage visualization per device</li> 
+                                                <li>Parental control setup</li>                                                                                       
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                    <div class="row g-3 g-md-6">
+                                        <div class="col-sm-12 overflow-hidden">
+                                            <img src="./assets/images/project8.png" alt="project"
+                                                class="w-100 object-fit-cover portfolio-details-img" />
+                                        </div>
+                                    </div>
+
+                                     <ul class="mt-5">
+                                      <li class="n4-color fs-seven mb-2 mb-md-3" style="list-style: none;">
+                                            <b>Visual Design</b>
+                                            <ul>
+                                                <li>Applied Bell brand guidelines with modern UI (clean typography, more whitespace).</li>  
+                                                <li>Introduced card-based layouts for clarity.</li> 
+                                                <li>Data usage represented with visual graphs & icons.</li>                                                                                       
+                                            </ul>
+                                        </li>
+                                    </ul>
+
+                                    
+                                     <ul class="mt-5">
+                                      <li class="n4-color fs-seven mb-2 mb-md-3" style="list-style: none;">
+                                            <b>Prototype & Testing</b>
+                                            <ul>
+                                                <li>Interactive Figma prototype.</li>  
+                                                <li>Remote usability testing with 12 participants.</li> 
+                                                <li>Iterated based on feedback (e.g., renamed “Pause Device” → “Temporarily Disconnect” for clarity).</li>                                                                                       
                                             </ul>
                                         </li>
                                     </ul>
@@ -370,15 +403,14 @@
 
                                 <div data-aos="fade-up">
                                     <h3 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
-                                        The Approach & Solution
+                                        Final Solution Highlights
                                     </h3>
                                     <p class="text-seven n4-color mb-5 mb-md-10">
                                     <ul>
-                                        <li>Wireframes: Simplified layouts, clearer hierarchy for plans.</li>
-                                        <li>Visual Design: Clean branding, accessible typography, engaging UI.</li>
-                                        <li>Interaction Design: Step-by-step guided flow for plan selection → add-ons →
-                                            sign-up.</li>
-                                        <li>Iteration: Tested with store reps/customers for feedback.</li>
+                                        <li>Device Management: List of all devices with data usage + pause/resume toggle.</li>
+                                        <li>Parental Controls: Restrict access by schedule or category.</li>
+                                        <li>Network Health: Real-time Wi-Fi performance card with troubleshooting shortcuts.</li>
+                                        <li>Personalization: Rename devices, add icons (e.g., laptop, phone, TV).</li>
 
                                     </ul>
                                     </p>
@@ -390,15 +422,9 @@
                                         The Results
                                     </h3>
                                     <p data-aos="fade-up" class="text-seven n4-color mb-8 mb-md-15">
-                                        The redesigned kiosk offers a more intuitive and engaging user experience,
-                                        allowing customers to navigate and complete tasks with ease. It reduces the need
-                                        for assistance from sales representatives, streamlines the sign-up process for
-                                        faster completion, and ultimately increases customer confidence in using the
-                                        kiosk independently.
+                                       Improved task completion rate (device pause flow from 6 taps → 2 taps).Positive feedback in pilot: users found app “much clearer and faster.” Reduced dependency on customer service. Increased confidence in using the app independently.
                                     </p>
-
                                 </div>
-
                             </div>
                         </div>
                     </div>
