--- a/portfolio_details8.html
+++ b/portfolio_details8.html
@@ -242,8 +242,8 @@
             </div>
 
             <!-- Portfolio details section start -->
-            <section class="py-60">
-                <div class="container pb-60">
+            <section class="py-60 mt-10 mt-lg-0">
+                <div class="container pb-60 pt-60">
                     <div class="row g-6">
                         <div data-aos="fade-left" class="col-12 col-xl-3">
                             <div class="d-flex flex-column gap-5 position-sticky top-5 brn4 p-3 rounded">
