--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -192,7 +192,7 @@
                   </span>
                   <span class="d-none d-md-block">Portfolio</span>
                 </div>
-                <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3 d-none d-md-block">06</span>
+                <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3 d-none d-md-block">08</span>
               </a>
             </li>
          
@@ -414,11 +414,20 @@
                 </div>
 
               </div>
+              <div class="d-flex flex-wrap justify-content-center gap-3 gap-md-6 mt-4 mt-md-8">
+                   <a href="portfolio_details2.html"
+                    class="primary-btn btn-disable px-3 px-md-6 py-2 fw-medium d-flex align-items-center gap-2 rounded-3">
+                    <i class="ph ph-arrow-left"></i>
+                  </a> 
+                  <a href="portfolio_details4.html"
+                    class="primary-btn px-3 px-md-6 py-2 fw-medium d-flex align-items-center gap-2 rounded-3">
+                   <i class="ph ph-arrow-right"></i>
+                  </a>          
+                </div>
             </div>
           </div>
         </div>
 
-        <!-- next project section start 
           <div class="next-project pt-120 pb-120">
             <div
               class="container d-flex gap-3 gap-md-6 flex-wrap justify-content-between align-items-center"
