--- a/portfolio_details6.html
+++ b/portfolio_details6.html
@@ -194,7 +194,7 @@
                   </span>
                   <span class="d-none d-md-block">Portfolio</span>
                 </div>
-                <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3 d-none d-md-block">06</span>
+                <span class="n5-color bg2-color fs-ten px-1 pt-1 rounded-2 me-3 d-none d-md-block">08</span>
               </a>
             </li>
          
@@ -421,34 +421,22 @@
                 </div>
 
               </div>
+
+               <div class="d-flex flex-wrap justify-content-center gap-3 gap-md-6 mt-4 mt-md-8">
+                   <a href="portfolio_details5.html"
+                    class="primary-btn btn-disable px-3 px-md-6 py-2 fw-medium d-flex align-items-center gap-2 rounded-3">
+                    <i class="ph ph-arrow-left"></i>
+                  </a> 
+                  <a href="portfolio_details7.html"
+                    class="primary-btn px-3 px-md-6 py-2 fw-medium d-flex align-items-center gap-2 rounded-3">
+                   <i class="ph ph-arrow-right"></i>
+                  </a>          
+                </div>
             </div>
           </div>
         </div>
 
-        <!-- next project section start 
-          <div class="next-project pt-120 pb-120">
-            <div
-              class="container d-flex gap-3 gap-md-6 flex-wrap justify-content-between align-items-center"
-            >
-              <div data-aos="zoom-in-left" class="next-project-content">
-                <h3 class="display-four n11-color fw-semibold mb-2 mb-md-4">
-                  Let’s Work together on your next Project
-                </h3>
-                <p class="fs-seven n11-color">
-                  I am available for freelance projects. Hire me and get your
-                  project done.
-                </p>
-              </div>
-              <a
-                data-aos="zoom-in-right"
-                href="contact.html"
-                class="primary-btn bg1-color fw-medium n11-color px-3 px-md-6 py-2 py-md-4 rounded-pill d-flex align-items-center gap-2 h-100 text-nowrap"
-              >
-                <i class="ph ph-arrow-right"></i>Let’s get in touch
-              </a>
-            </div>
-          </div>
-           next project section end -->
+       
       </section>
       <!-- Portfolio details section end -->
 
