--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
         <div class="header-bottom-menu w-full">
           <ul class="d-flex gap-1 align-items-center justify-content-between">
             <li>
-              <a href="index.html" class="d-flex align-items-center gap-2 n11-color fs-eight p-2">
+              <a href="index.html" class="d-flex align-items-center gap-2 n5-color fs-eight p-2">
                 <span class="fs-five d-flex align-items-center justify-content-center">
                   <i class="ph-fill ph-user"></i>
                 </span>
@@ -170,9 +170,9 @@
                  
         
             <li class="rounded-3 bg1-color">
-              <a href="contact.html" class="d-flex align-items-center gap-2 n5-color fs-eight p-2">
-                <span class="fs-five d-flex align-items-center justify-content-center"><i
-                    class="ph-fill ph-envelope"></i></span>
+              <a href="contact.html" class="d-flex align-items-center gap-2 n11-color fs-eight p-2">
+                <span class="fs-five d-flex align-items-center justify-content-center">
+                  <i class="ph-fill ph-envelope"></i></span>
                 <span class="d-none d-md-block">Contact</span>
               </a>
             </li>
