--- a/portfolio_details1.html
+++ b/portfolio_details1.html
@@ -481,7 +481,7 @@
                                     <h5 class="fs-five n5-color fw-semibold mt-5 mt-md-10 mb-2 mb-md-4">
                                         The Results
                                     </h5>
-                                    <ul class="mb-5">
+                                    <ul class="mb-5 n5-color fs-seven">
                                         <li>
                                             Over 25,000+ users onboarded within the first 6 months
                                         </li>
