--- a/portfolio_details3.html
+++ b/portfolio_details3.html
@@ -427,7 +427,7 @@
                                         The Approach & Solution
                                     </h3>
 
-                                    <ul class="fs-seven n4-color mb-5 mb-md-10">
+                                    <!--<ul class="fs-seven n4-color mb-5 mb-md-10">
                                         <li>
                                             Competitive Analysis & Benchmarking: Reviewed UX patterns from
                                             top-performing eCommerce brands
@@ -454,8 +454,17 @@
                                             with real users on
                                             mobile and desktop
                                         </li>
-                                    </ul>
-
+                                    </ul>  -->
+                                    <div class="row g-3 g-md-6 mt-5">
+                                        <div class="col-6 overflow-hidden">
+                                            <img src="./assets/images/approach.png" alt="project"
+                                                class="w-100 object-fit-cover portfolio-details-img" />
+                                        </div>
+                                        <div class=" col-6 overflow-hidden">
+                                            <img src="./assets/images/buyflow-home.png" alt="project"
+                                                class="w-100 portfolio-details-img" />
+                                        </div>
+                                    </div>
 
 
                                 </div>
@@ -474,21 +483,15 @@
 
 
                                     <div class="row g-3 g-md-6 mt-5">
-                                        <div class="col-sm-1 overflow-hidden"></div>
-                                        <div class="col-sm-5 overflow-hidden">
-                                            <img src="./assets/images/projectd-3.png" alt="project"
-                                                class="w-100 object-fit-cover portfolio-details-img" />
-                                        </div>
-                                        <div class="col-sm-1 overflow-hidden"></div>
 
-                                        <div class="col-sm-5 overflow-hidden">
-                                            <img src="./assets/images/projectd-3-1.png" alt="project"
+                                        <div class="col-12 overflow-hidden">
+                                            <img src="./assets/images/buyflow-result.png" alt="project"
                                                 class="w-100 object-fit-cover portfolio-details-img" />
                                         </div>
-                                        <div class="overflow-hidden">
-                                            <img src="./assets/images/project3-1.png" alt="project"
-                                                class="w-100 portfolio-details-img" />
-                                        </div>
+
+
+
+
                                     </div>
 
                                 </div>
